--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,6 +24,11 @@
   color: white;
 }
 
+/* .App-header-logo {
+  padding-left: px;
+  color: whitesmoke;
+} */
+
 .App-link {
   color: #61dafb;
 }
