--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,41 +8,48 @@ body {
 }
 
 
-/*This sets the background color of the header section to #404040*/
-header {
-  background-color: #404040;
-
-/*This sets the padding inside the header section to 1rem */ 
-  padding: 1rem;  
-}
-
-/*This sets the color of the link in the header section to #ffffff, makes the text bold, and removes the underline effect from the link */
-header a {
-  color: #ffffff;
-  font-weight: bold;
-  text-decoration: none;
-}
-
 .products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.product {
-  border:1px #404040 solid;
-  margin: 1rem;
-}
-
-.product img {
-  width: 100%;
-  max-width: 400px;
-}
-
 main {
-  padding: 1rem;
+  flex: 1;
 }
 
 .product-desc {
   padding: 1rem;
 }
+
+.side-fullpage {
+  min-height: 100vh;
+}
+
+.rating span {
+  color: #ffc000
+}
+
+.btn-primary,
+.btn-outline-primary {
+  background-color: #f0c040;
+  color: #000000;
+  border-width: 0px;
+}
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-outline-primary:hover,
+.btn-outline-primary:focus {
+  background-color: #d3a62c;
+}
+
+.product-card {
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+  box-shadow: none;
+  transform: scale(1);
+}
+.product-card:hover {
+  box-shadow: 10px 10px 10px #888888;
+  transform: scale(1.02);
+}
+
