--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,9 +18,9 @@ main {
   flex: 1;
 }
 
-.product-desc {
+/* .product-desc {
   padding: 1rem;
-}
+} */
 
 .side-fullpage {
   min-height: 100vh;
@@ -47,9 +47,33 @@ main {
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
   box-shadow: none;
   transform: scale(1);
+  height: 100%;
 }
 .product-card:hover {
   box-shadow: 10px 10px 10px #888888;
   transform: scale(1.02);
 }
+
+.card-img {
+  max-width: auto;
+  max-height: 100%;
+  object-fit: cover ;
+}
+
+/* .card-img-wrapper {
+  width: 100%;
+  height: 10rem;
+} */
+
+.desc {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* number of lines to show*/
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+/* .img-prod {
+  width: 100%;
+} */
 
