--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,7 +22,7 @@ main {
   padding: 1rem;
 } */
 
-.side-fullpage {
+.side-fullPage {
   min-height: 100vh;
 }
 
@@ -57,13 +57,13 @@ main {
 .card-img {
   max-width: auto;
   max-height: 100%;
-  object-fit: cover ;
+  object-fit: cover ;  
 }
 
-/* .card-img-wrapper {
-  width: 100%;
-  height: 10rem;
-} */
+.card-img-wrapper {
+  width:max-content;
+  height: 10rem;  
+}
 
 .desc {
   overflow: hidden;
@@ -76,4 +76,12 @@ main {
 /* .img-prod {
   width: 100%;
 } */
+
+img-thumbnail {
+  height: 70px;  
+}
+
+.small-container {
+  max-width: 600px;
+}
 
